--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.1.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   }
